# NexusRAG

./: .gitignore  README.md
backend/: config.py  document_loaders.py  main.py  pyproject.toml  rag_pipeline.py  requirements.txt  supabase_client.py  vector_store.py
frontend/: next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  proxy.ts
frontend/app/: Providers.tsx  globals.css  layout.tsx  page.tsx
frontend/app/auth/: page.tsx
frontend/app/login/: page.tsx
frontend/app/reset-password/: page.tsx
frontend/components/: DocumentUpload.tsx  RAGChat.tsx  Sidebar.tsx  SystemStatus.tsx
frontend/lib/: AuthContext.tsx  api.ts
