[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb",
    "fastapi",
    "langchain",
    "langchain-community",
    "langchain-core",
    "langchain-google-genai>=4.2.1",
    "langchain-openai",
    "langchain-text-splitters>=1.1.1",
    "langgraph",
    "pydantic-settings",
    "pypdf",
    "python-dotenv",
    "python-multipart",
    "sentence-transformers",
    "supabase",
    "unstructured",
    "uvicorn",
]
